--- a/src/app/components/modals/view-task/view-task.component.html
+++ b/src/app/components/modals/view-task/view-task.component.html
@@ -19,6 +19,13 @@
     </p>
   </div>
 
+  <div class="modal-body-text" *ngIf="estimation">
+    <div class="title">
+      Estimation
+    </div>
+    <p>{{estimation}} hours</p>
+  </div>
+
  
   <div class="modal-body-text">
     <div class="title">
