--- a/src/app/components/modals/settings/settings.component.scss
+++ b/src/app/components/modals/settings/settings.component.scss
@@ -131,7 +131,9 @@
     display: flex;
     align-items: center;
     border-radius: 10px;
-    background: $listColor;
+    background: $taskColor;
+    min-width: 130px;
+    justify-content: center;
   }
 
 
