--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -73,7 +73,7 @@
     border-radius: 0 30px 0 30px;
     position: relative;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    background: ghostwhite url($topBackground) no-repeat center top /cover;
+    background: azure;
     background-position: unset;
 }
 
@@ -213,31 +213,9 @@
        cursor: pointer;
        font-size: 20px;
     }
-}
-
-.delete {
-    color: $errorColor;
-}
-
-.modify {
-    color: $taskColor;
-}
-
-.complete {
-    color: $darkSpringGreen;
-}
-
-.begin {
-    color: $darkSpringGreen;
-}
-
-.pause {
-    color: $errorColor;
-}
-
-.clone {
     color: $listColor;
 }
+
 
 .add-task {
     height: 20%;
