--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
-$listColor: rgb(128,0,128);
-$taskColor: #98C540;
-$darkSpringGreen: #2E6B48;
+$listColor: #03DAC5;
+$taskColor: #BB86FC;
+$darkSpringGreen: #BB86FC;
 $prussianBlue: #122E42;
-$errorColor: #cc0000;
+$errorColor: #ff0266;
 $topBackground: "../../../assets/images/leavesBgnd.png";
