--- a/src/app/components/work-break/work-break.component.scss
+++ b/src/app/components/work-break/work-break.component.scss
@@ -8,7 +8,7 @@
         border-radius: 30px;
         padding: 10px;
         font-size: 18px;
-        background: orange;
+        background: $errorColor;
         color: white;
         border: none;
         opacity: 0.8;
