--- a/src/app/components/dialogs/success-message/success-message.component.scss
+++ b/src/app/components/dialogs/success-message/success-message.component.scss
@@ -5,7 +5,7 @@
     top: 10%;
     left: 35%;
     padding: 10px;
-    background: $taskColor;
+    background: $listColor;
     border-radius: 8px;
     color: white;
     min-width: 30%;
