--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@
     height: 100%;
 }
 
-html, body {
+.color-scheme-light {
     height: 100%;
     background: url(assets/images/greenForest.jpg) no-repeat fixed;
     background-size: cover;
@@ -233,10 +233,12 @@ input:disabled, textarea:disabled, select:disabled {
 .color-scheme-dark {
     color: var(--text-dark);
 
-   
     background: url(assets/images/night3.jpg) no-repeat top center;
     background-size: cover;
-    
+
+    .card-container {
+        background: #1F1B24;
+    }
   
     h1,
     h2,
