--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -581,3 +581,9 @@
     transform: rotateY(720deg);
     color: white;
 }
+
+.version {
+    position: absolute;
+    right: 100px;
+    bottom: 5px;
+}
