--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@
 
 .color-scheme-light {
     height: 100%;
-    background: url(assets/images/greenForest.jpg) no-repeat fixed;
+    background: url(assets/images/trance2.jpg) no-repeat fixed;
     background-size: cover;
 }
 
@@ -233,7 +233,7 @@ input:disabled, textarea:disabled, select:disabled {
 .color-scheme-dark {
     color: var(--text-dark);
 
-    background: url(assets/images/night3.jpg) no-repeat top center;
+    background: url(assets/images/matrix1.jpg) no-repeat top center;
     background-size: cover;
 
     .card-container {
