--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -46,16 +46,20 @@
                     <div  cdkDropList class="inprogress-tasks" (cdkDropListDropped)="drop($event, inProgressTasks)">
                         <div *ngFor="let task of (inProgressTasks | searchTaskFilter : searchFilter);let indexOfElement=index;" class="task task-color" cdkDrag>
                             <div class="example-custom-placeholder" *cdkDragPlaceholder></div>
-                            <div class="checkbox-and-title">
-                                <div *ngIf="task.isStarted == TASK_STATUS.started" class="circle" (click)="completeTask(task, indexOfElement)">
-                                    <div class="checkmark"></div>
-                                </div>
-                                <div *ngIf="task.isStarted == false" class="circle gray-circle" (click)="notStartedTask(task)"></div>
-                                <app-display-tags [tags]="task.tags"></app-display-tags>
-                                <div [ngClass]="task.isStarted == false ? 'not-started-task-color' : ''" class="task-title" (click)="openTaskModal(task)">
-                                    {{task.title}}
+                            <div class="title-wrapper">
+                                <div class="checkbox-and-title">
+                                    <div *ngIf="task.isStarted == TASK_STATUS.started" class="circle" (click)="completeTask(task, indexOfElement)">
+                                        <div class="checkmark"></div>
+                                    </div>
+                                    <div *ngIf="task.isStarted == false" class="circle gray-circle" (click)="notStartedTask(task)"></div>
+                                    <app-display-tags [tags]="task.tags"></app-display-tags>
+                                    <div [ngClass]="task.isStarted == false ? 'not-started-task-color' : ''" class="task-title" (click)="openTaskModal(task)">
+                                        {{task.title}}
+                                    </div>
+                                    <app-status-circles [circles]="task.estimation"></app-status-circles>
                                 </div>
                             </div>
+                            
                             <div class="actions">
                                 <div *ngIf="task.isStarted == TASK_STATUS.started && task.showTimer == true" class="task-duration">
                                     {{task.workingTime}}
