Tags distribution now hidden if there are no tags in the list

--- a/src/app/components/modals/view-list/view-list.component.html
+++ b/src/app/components/modals/view-list/view-list.component.html
@@ -35,7 +35,7 @@
     </p>
   </div>
 
-  <div class="modal-body-text pie-chart">
+  <div class="modal-body-text pie-chart" *ngIf="tagsObject.tagsArray.length > 0">
     <div class="title">
       Tags distribution
     </div>
