--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,8 +27,8 @@
     z-index: 9999;
 }
 
+html, body { height: 100%;overflow: hidden!important; }
 
-html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .modal {
