--- a/src/app/components/lists/lists.component.scss
+++ b/src/app/components/lists/lists.component.scss
@@ -35,7 +35,7 @@
             position: absolute;
             top: -8px;
             font-size: 15px;
-            left: 0;
+            left: 18%;
             color: $taskColor;
         }
 
