--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -6,10 +6,6 @@
 
 .task-color {
     color: $taskColor;
-
-    .not-started-task-color {
-        color: gray;
-    }
 }
 
 .add-list-button {
@@ -258,30 +254,6 @@
     animation: pulse-black 2s infinite;
 }
 
-/* width */
-::-webkit-scrollbar {
-    width: 6px;
-    cursor:pointer;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
-}
-   
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: $taskColor!important; 
-    border-radius: 10px;
-}
-  
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    opacity: 0.8;
-    cursor: pointer;
-}
-
 .add-task-reminder {
     max-width: 200px;
     font-size: 18px;
@@ -476,7 +448,7 @@
         .user-dropdown-action {
             color: white;
             padding: 5px 10px 5px 10px;
-            background: $listColor;
+            background: $taskColor;
         }
 
         .user-dropdown-action:first-child {
