--- a/src/app/components/dialogs/success-message/success-message.component.scss
+++ b/src/app/components/dialogs/success-message/success-message.component.scss
@@ -2,8 +2,12 @@
 
 .success-message-container {
     position: absolute;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
     top: 10%;
-    left: 35%;
     padding: 10px;
     background: $listColor;
     border-radius: 8px;
