--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="user-section-wrapper">  
         <div ngbDropdown class="user-section" id="userSectionDropdown">
-            <img class="user-small-image"   [src]="this.profilePicture ? this.profilePicture : '//ssl.gstatic.com/accounts/ui/avatar_2x.png'">
+            <img class="user-small-image" [src]="this.profilePicture">
             <div ngbDropdownToggle class="username" >
                 {{ userName }}
             </div>
