--- a/src/app/components/dialogs/error-message/error-message.component.html
+++ b/src/app/components/dialogs/error-message/error-message.component.html
@@ -1,4 +1,4 @@
-<div class="error-message-container" [ngClass]="showModal != false ? 'show' : ''">
+<div class="error-message-container absolute-center" [ngClass]="showModal != false ? 'show' : ''">
     <div class="error-message-text">
         {{errorMessage}}
         <i class="fas fa-exclamation-triangle error-icon"></i>
