--- a/src/app/components/dialogs/success-message/success-message.component.html
+++ b/src/app/components/dialogs/success-message/success-message.component.html
@@ -1,4 +1,4 @@
-<div class="success-message-container" [ngClass]="showModal != false ? 'show' : ''">
+<div class="success-message-container absolute-center" [ngClass]="showModal != false ? 'show' : ''">
     <div class="success-message-text">
         {{successMessage}}
         <i class="fa-solid fa-check success-icon"></i>
