--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -4,14 +4,29 @@
     justify-content: center;
 }
 
-.card-container {
-    padding: 30px;
-}
-
 .login .card-container {
     min-width: 400px;
 }
 
 .login .alert-danger {
     margin-top: 10px;
+}
+
+.login,
+.login .height  {
+    height: 100%;
+}
+
+.card-container {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    padding: 30px;
+}
+
+.version, .register-account {
+    display: flex;
+    justify-content: center;
 }
