--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,12 +1,15 @@
 <div class="container register">
-    <div class="row center margin-top">
-        <div class="col-md-6 center">
+    <div class="row height center margin-top">
+        <div class="col-md-6 height center">
             <div class="card card-container">
-              <img
-                id="profile-img"
-                src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-                class="profile-img-card"
-              />
+              <div class="row title-row mb-5">
+                <div class="col-12 flex-center">
+                    <div class="title has-text-primary">
+                        <h1 class="title-header"> TaskFlow </h1> 
+                        <i class="fa-solid fa-tree app-logo"></i>
+                    </div>
+                </div>
+              </div>
               <form
                 *ngIf="!isSuccessful"
                 name="form"
@@ -88,9 +91,11 @@
               <div class="alert alert-success" *ngIf="isSuccessful">
                 Your registration is successful!
               </div>
-
-              <div class="login">
-                Already have an account? Login <a routerLink="/login">  here </a>
+              <div class="login mt-3">
+                Already have an account? Login &nbsp; <a routerLink="/login">  here </a>
+              </div>
+              <div class="version mt-3">
+                Version {{version}}
               </div>
             </div>
           </div>
