--- a/src/styles.scss
+++ b/src/styles.scss
@@ -326,7 +326,7 @@ input:disabled, textarea:disabled, select:disabled {
 }
 
 .pie-label.animation {
-    font-size: 16px;
+    font-size: 16px;    
 }
 
 .legend-labels {
@@ -346,4 +346,84 @@ input:disabled, textarea:disabled, select:disabled {
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
+}
+
+.title-row .title:hover:before {
+    top: 0;
+}
+
+.title-row .title:hover .app-logo {
+    transform: rotateY(720deg);
+    color: white;
+}
+
+
+.title-row .title {
+    position: relative;
+    overflow: hidden;
+    border: 5px solid $taskColor;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
+    border-radius: 0 100px 55px 125px;
+    background: $taskColor;
+    padding: 2px 10px 2px 10px;
+    width: fit-content;
+    
+    h1 {
+        color: white;
+    }
+
+    .app-logo {
+        position: relative;
+        color: white;
+        transition: 1s;
+        z-index: 3;  
+    }
+
+    .fa-tree {
+        margin-left: 10px;
+    }
+
+    .fa-tree, 
+    .fa-pagelines {
+        font-size: 28px;
+    }
+}
+
+.title:before {
+    background: $listColor;
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 1s;
+    z-index: 1;
+}
+
+.title-row .title-header {
+    position: relative;
+    color: white;
+    overflow: hidden;
+    transition: 1s;
+    z-index: 3;
+    font-size: 35px;
+}
+
+
+.flex-center {
+    display: flex;
+    justify-content: center;
+}
+
+.login .btn-primary,
+.register .btn-primary {
+    background: $listColor;
+}
+
+.login .btn-primary:hover,
+.register .btn-primary:hover {
+    opacity: 0.9;
 }
