User can add profile picture after registering

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -427,3 +427,21 @@ input:disabled, textarea:disabled, select:disabled {
 .register .btn-primary:hover {
     opacity: 0.9;
 }
+
+.upload {
+    cursor: pointer;
+}
+
+.custom-file-label {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    z-index: 10;
+}
+
+.custom-file-label:hover {
+    cursor: pointer;
+}
+
+.custom-file-label::after {
+    display: none!important;
+}
