Fixed bug on styling of the logo

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="row title-row">
         <div class="col-4">
-            <div class="title has-text-primary">
+            <div class="app-title has-text-primary">
                 <h1 class="title-header"> TaskFlow </h1> 
                 <i class="fa-solid fa-tree app-logo"></i>
             </div>
