--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -4,7 +4,7 @@
             <div class="card card-container">
               <div class="row title-row mb-5">
                 <div class="col-12 flex-center">
-                    <div class="title has-text-primary">
+                    <div class="app-title has-text-primary">
                         <h1 class="title-header"> TaskFlow </h1> 
                         <i class="fa-solid fa-tree app-logo"></i>
                     </div>
