--- a/src/styles.scss
+++ b/src/styles.scss
@@ -348,17 +348,17 @@ input:disabled, textarea:disabled, select:disabled {
     width: fit-content;
 }
 
-.title-row .title:hover:before {
+.title-row .app-title:hover:before {
     top: 0;
 }
 
-.title-row .title:hover .app-logo {
+.title-row .app-title:hover .app-logo {
     transform: rotateY(720deg);
     color: white;
 }
 
 
-.title-row .title {
+.title-row .app-title {
     position: relative;
     overflow: hidden;
     border: 5px solid $taskColor;
@@ -391,7 +391,7 @@ input:disabled, textarea:disabled, select:disabled {
     }
 }
 
-.title:before {
+.app-title:before {
     background: $listColor;
     content: "";
     position: absolute;
