Added reset password (component, routes, no logic)

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -76,10 +76,14 @@
           Logged in as user. <!--TODO add role-->
         </div>
 
-        <div class="register-account mt-3">
+        <div class="flex-center mt-3">
+          Forgot your password? Click &nbsp; <a routerLink="/resetPassword"> here </a>
+        </div>
+
+        <div class="flex-center mt-3">
           You don't have an account yet? Register  &nbsp; <a routerLink="/register"> here </a>
         </div>
-        <div class="version mt-3">
+        <div class="flex-center mt-3">
           Version {{version}}
         </div>
       </div>
