--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -14,7 +14,7 @@
                     #email="ngModel">
             </div>
             <div class="form-group">
-                <button class="btn btn-primary btn-block"> Reset Password </button>
+                <button type="submit" class="btn btn-primary btn-block"> Send Reset Link </button>
             </div>
                 
           </form>
