Changing password after receiving reset link now works!

--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -2,7 +2,7 @@
     <div class="row height center">
       <div class="col-md-6 center">
         <div class="card card-container ">
-          <form  name="form" (ngSubmit)="f.form.valid && onSubmit()"  #f="ngForm">
+          <form *ngIf="!mailSent" name="form" (ngSubmit)="f.form.valid && onSubmit()"  #f="ngForm" novalidate>
             <div class="form-group">
                 <label class="mb-3" for="email"> Please enter your email: </label>
                 <input
@@ -11,14 +11,23 @@
                     name="email"
                     [(ngModel)]="form.email"
                     required
+                    email
                     #email="ngModel">
+                <div class="alert-danger mt-3" style="padding:3px;" *ngIf="mailError && f.submitted">
+                  Email address is invalid!
+                </div>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-block"> Send Reset Link </button>
             </div>
                 
           </form>
-          <div class="flex-center mt-3">
+          <div *ngIf="mailSent" class="flex-center mt-3">
+            <h3 style="text-align: center;"> 
+              A reset link has been sent to your email. Please check your inbox.
+            </h3>
+          </div>
+          <div *ngIf="!mailSent" class="flex-center mt-3">
             Go back to login  &nbsp; <a routerLink="/login"> here </a>
           </div>
         </div>
