--- a/src/app/pages/new-password/new-password.component.html
+++ b/src/app/pages/new-password/new-password.component.html
@@ -2,7 +2,7 @@
     <div class="row height center">
       <div class="col-md-6 center">
         <div class="card card-container ">
-          <form  name="form" (ngSubmit)="f.form.valid && onSubmit()"  #f="ngForm">
+          <form *ngIf="!passwordChanged" name="form" (ngSubmit)="f.form.valid && onSubmit()"  #f="ngForm">
             <div class="form-group">
                 <label class="mb-3" for="email"> Enter a new password: </label>
                 <input
@@ -10,8 +10,10 @@
                     class="form-control"
                     name="password"
                     [(ngModel)]="form.password"
-                    required
-                    #email="ngModel">
+                    #password="ngModel">
+                    <div class="alert-danger mt-3" style="padding:3px;" *ngIf="passwordLengthError && f.submitted">
+                        Password minimum length is 8 characters!
+                    </div>
             </div>
             <div class="form-group">
                 <label class="mb-3" for="email"> Please confirm password: </label>
@@ -20,15 +22,22 @@
                     class="form-control"
                     name="confirmPassword"
                     [(ngModel)]="form.confirmPassword"
-                    required
-                    #email="ngModel">
+                    #confirmPassword="ngModel">
+                    <div class="alert-danger mt-3" style="padding:3px;" *ngIf="passwordMatchError && f.submitted">
+                        The two passwords do not match!
+                    </div>
             </div>
             <div class="form-group">
                 <button type="submit"  class="btn btn-primary btn-block"> Change Password </button>
             </div>
                 
           </form>
-          <div class="flex-center mt-3">
+          <div *ngIf="passwordChanged" class="flex-center mt-3">
+            <h3 style="text-align: center;"> 
+              Password has been changed successfully!
+            </h3>
+          </div>
+          <div  class="flex-center mt-3">
             Go back to login  &nbsp; <a routerLink="/login"> here </a>
           </div>
         </div>
