--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -13,8 +13,8 @@
                     required
                     email
                     #email="ngModel">
-                <div class="alert-danger mt-3" style="padding:3px;" *ngIf="mailError && f.submitted">
-                  Email address is invalid!
+                <div class="custom-alert-danger mt-3" style="padding:3px;" *ngIf="mailError && f.submitted">
+                  {{mailError}}
                 </div>
             </div>
             <div class="form-group">
