--- a/src/styles.scss
+++ b/src/styles.scss
@@ -86,6 +86,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 .modal .modal-body {
+    margin-top: 5px;
     overflow-x: auto;
 }
 
@@ -418,6 +419,10 @@ input:disabled, textarea:disabled, select:disabled {
     justify-content: center;
 }
 
+.btn-primary {
+    font-weight: 500;
+}
+
 .new-password .btn-primary,
 .reset-password .btn-primary,
 .login .btn-primary,
@@ -448,4 +453,13 @@ input:disabled, textarea:disabled, select:disabled {
 
 .custom-file-label::after {
     display: none!important;
+}
+
+.custom-alert-danger {
+    text-align: center;
+    color: white;
+    font-weight: 500;
+    padding: 3px;
+    background: $errorColor;
+    border-radius: 3px;
 }
