--- a/src/app/pages/new-password/new-password.component.html
+++ b/src/app/pages/new-password/new-password.component.html
@@ -11,7 +11,7 @@
                     name="password"
                     [(ngModel)]="form.password"
                     #password="ngModel">
-                    <div class="alert-danger mt-3" style="padding:3px;" *ngIf="passwordLengthError && f.submitted">
+                    <div class="custom-alert-danger mt-3" style="padding:3px;" *ngIf="passwordLengthError && f.submitted">
                         Password minimum length is 8 characters!
                     </div>
             </div>
@@ -23,7 +23,7 @@
                     name="confirmPassword"
                     [(ngModel)]="form.confirmPassword"
                     #confirmPassword="ngModel">
-                    <div class="alert-danger mt-3" style="padding:3px;" *ngIf="passwordMatchError && f.submitted">
+                    <div class="custom-alert-danger mt-3" style="padding:3px;" *ngIf="passwordMatchError && f.submitted">
                         The two passwords do not match!
                     </div>
             </div>
