--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -63,6 +63,15 @@
             </button>
           </div>
           <div class="form-group">
+            <a [href]="API_GOOGLE_URL" class="google-login btn-primary">
+              <img
+                src="../../../assets/images/google-icon.png"
+                alt="Google Sign In"
+                class="img-fluid">
+                <div> Sign in with Google </div>
+            </a>
+          </div>
+          <div class="form-group">
             <div
               class="mt-3 custom-alert-danger"
               role="alert"
