--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -30,3 +30,21 @@
     display: flex;
     justify-content: center;
 }
+
+.google-login {
+    display: flex;
+    color: white;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    padding: 0.375rem 0.75rem;
+    img {
+        height: 2rem;
+        margin-right: 10px;
+    } 
+}
+
+.google-login:hover {
+    text-decoration: none;
+    opacity: 0.8;
+}
